clusters/on-prem-k3s-cluster/apps/pve/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve-external
  namespace: pve
spec:
  ports:
    - port: 8006
      targetPort: 8006
      protocol: TCP
