clusters/on-prem-k3s-cluster/apps/pve/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-ingressroute
  namespace: pve
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve.local.alexdevops.com`)
      kind: Rule
      services:
        # This is to connect your Service directly with the magic of "Skip Verify" without any annotation
        - name: pve-external
          port: 8006
          scheme: https
          serversTransport: transport
  tls: {}
